'New Thread' button click no longer causes layout jump. 'Leave a comment' button click creates a standardized comment interface. Replying to comments shows '@' of who one is responding to

--- a/css/index.css
+++ b/css/index.css
@@ -82,6 +82,22 @@ button:hover {
   justify-content: space-around;
 }
 
+.section--neutral {
+  border-color: transparent;
+}
+
+.section__input {
+  display: block;
+  border: 2px solid rgb(136, 105, 105);
+  border-radius: 5px;
+  font-size: 115%;
+  padding: 1%;
+}
+
+.btn--margin {
+  margin-bottom: 6%;
+}
+
 .profile {
   display: flex;
   align-items: center;
@@ -166,6 +182,10 @@ button:hover {
   background-color: blue;
 }
 
+.commentThreadReplyContainer {
+  position: relative;
+}
+
 .commentBox, .commentBox--blank, .commentBox--tint, .commentBlock{
   position: relative;
   display: flex;
@@ -239,6 +259,7 @@ button:hover {
   width: 100%;
   height: 100%;
   opacity: 0;
+  pointer-events: none;
   background: radial-gradient(ellipse farthest-corner at 50% 150%,
       rgb(136, 105, 105), transparent 70%);
 }
@@ -248,13 +269,23 @@ button:hover {
   margin-left: 1%;
 }
 
-.commentBlock {
+.commentBlock--overlay {
+  position: absolute;
+  width: 400px;
+  height: 400px;
+  top: 0%;
+  color: white;
+  background-color: rgb(136, 105, 105);
+  z-index: 2;
+}
+
+.commentBlock--invertColors {
   left: 15%;
   z-index: 1;
   opacity: 0.9;
   border: 2px solid white;
   color: white;
-  background-color: rgb(37, 37, 37);
+  background-color: rgb(136, 105, 105);
 }
 
 .commentBlockTextArea {
